--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -49,9 +49,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a2ed470",
+   "metadata": {},
+   "source": [
+    "## 還原變更"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "779f354e",
+   "metadata": {},
+   "source": [
+    "git revert  \n",
+    "git reset  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd2104f",
+   "id": "3cc0b2e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git revert => 撤銷以前的提交"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fea3a16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a0810d4",
    "metadata": {},
    "outputs": [],
    "source": []
