add branch introduction

--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -5,7 +5,7 @@
    "id": "e2d443f9",
    "metadata": {},
    "source": [
-    "# how to use git "
+    "# 1.how to use git "
    ]
   },
   {
@@ -50,35 +50,70 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2ed470",
+   "id": "4ca4ba2a",
    "metadata": {},
    "source": [
-    "## 還原變更"
+    "# 2.還原變更"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "779f354e",
+   "id": "0ee321c2",
    "metadata": {},
    "source": [
-    "git revert  \n",
+    "## 1.git revert  \n",
     "git reset  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cc0b2e4",
+   "cell_type": "markdown",
+   "id": "1f7b6499",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git revert => 撤銷以前的提交"
+    "git revert => 撤銷以前的提交(最常用方法)\n",
+    "\n",
+    "=> Revert 指令會建立一個新的提交，用於修復先前提交所做的更改。\n",
+    "=> 允許您撤消不需要的更改，而無需完全移除提交或修改儲存庫的歷史紀錄。\n",
+    "\n",
+    "雖然您可以使用git reset或git rebase -i 指令，從歷史紀錄中刪除先前的提交，但一般不建議這樣做，因為這會導致遠端儲存庫與其他成員的本地儲存庫不同。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36086f36",
+   "metadata": {},
+   "source": [
+    "# 3.拉取變更"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "525b9775",
+   "metadata": {},
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午4.14.53.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d650b38",
+   "metadata": {},
+   "source": [
+    "# 4.分支 branch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bf4008e",
+   "metadata": {},
+   "source": [
+    "![branch](https://nulab.com/static/56ab1eef4ae8db3a0199abc3e18952d0/21b4d/02.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fea3a16",
+   "id": "b0a9730b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +121,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0810d4",
+   "id": "2b03c69a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c20d3a94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f76a0a76",
    "metadata": {},
    "outputs": [],
    "source": []
