prepare for branch test  * * * * /bin/date "+%Y-%m-%d %H:%M:%S"

--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca4ba2a",
+   "id": "d9db83d2",
    "metadata": {},
    "source": [
     "# 2.還原變更"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee321c2",
+   "id": "dcbc1445",
    "metadata": {},
    "source": [
     "## 1.git revert  \n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7b6499",
+   "id": "3a676331",
    "metadata": {},
    "source": [
     "git revert => 撤銷以前的提交(最常用方法)\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36086f36",
+   "id": "5c3148c6",
    "metadata": {},
    "source": [
     "# 3.拉取變更"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525b9775",
+   "id": "f081a014",
    "metadata": {},
    "source": [
     "<img src=\"./picture/截圖 2023-10-12 下午4.14.53.png\">"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d650b38",
+   "id": "2ee3ca26",
    "metadata": {},
    "source": [
     "# 4.分支 branch"
@@ -104,16 +104,96 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bf4008e",
+   "id": "b9d4fcc0",
    "metadata": {},
    "source": [
     "![branch](https://nulab.com/static/56ab1eef4ae8db3a0199abc3e18952d0/21b4d/02.png)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b71d694",
+   "metadata": {},
+   "source": [
+    "## 建立branch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef2d731f",
+   "metadata": {},
+   "source": [
+    "__ 執行 git branch 命令，只是「建立」一個新的分支——它並不會切換到這個分支。__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "397d7383",
+   "metadata": {},
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午5.32.34.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b47916d1",
+   "metadata": {},
+   "source": [
+    "## 確認內容"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccdd63f3",
+   "metadata": {},
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午5.32.47.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "280adad6",
+   "metadata": {},
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午5.32.02.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93fc8053",
+   "metadata": {},
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午5.38.02.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a9730b",
+   "id": "f27ec04f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 變換指向"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a1f2ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "在分支之間切換\n",
+    "要切換到一個已經存在的分支，你可以執行 git checkout + name 命令， 讓我們切換到新的 name 分支：\n",
+    "\n",
+    "$ git checkout testing\n",
+    "這會移動 HEAD 並指向 testing 分支。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35c61caf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -121,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b03c69a",
+   "id": "fd068c33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c20d3a94",
+   "id": "03c36922",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -137,7 +217,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76a0a76",
+   "id": "061dea98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "498d7589",
    "metadata": {},
    "outputs": [],
    "source": []
