combine empty_file

--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -115,7 +115,7 @@
    "id": "0b71d694",
    "metadata": {},
    "source": [
-    "## 建立branch"
+    "## (1)建立branch"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "id": "b47916d1",
    "metadata": {},
    "source": [
-    "## 確認內容"
+    "## (2)確認內容"
    ]
   },
   {
@@ -167,52 +167,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f27ec04f",
+   "cell_type": "markdown",
+   "id": "9b2a0e09",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## 變換指向"
+    "## (3)變換指向"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34a1f2ad",
+   "cell_type": "markdown",
+   "id": "f1db5524",
    "metadata": {},
-   "outputs": [],
    "source": [
     "在分支之間切換\n",
     "要切換到一個已經存在的分支，你可以執行 git checkout + name 命令， 讓我們切換到新的 name 分支：\n",
     "\n",
-    "$ git checkout testing\n",
-    "這會移動 HEAD 並指向 testing 分支。"
+    "$ git checkout name\n",
+    "這會移動 HEAD 並指向 name 分支。"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35c61caf",
+   "cell_type": "markdown",
+   "id": "86035a7e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午5.44.35.png\">"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd068c33",
+   "cell_type": "markdown",
+   "id": "b2959002",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## (4)回主分支"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03c36922",
+   "cell_type": "markdown",
+   "id": "4e617fc7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"./picture/截圖 2023-10-12 下午6.12.46.png\">"
+   ]
   },
   {
    "cell_type": "code",
